--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,154 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz@0,6..12;1,6..12&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import 'reset.css';
-
-body {
-    font-family: 'Nunito', sans-serif;
-    font-size: 16px;
-    line-height: 1;
-}
-
-a {
-    text-decoration: none;
-}
-
-.wrapper {
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-/* Narbar */
-
-.header {
-    padding: 15px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    background: #fff;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-.header-main {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-main img {
-    width: 180px;
-    height: 50px;
-}
-
-.header-search {
-    width: max-content;
-    display: flex;
-    align-items: center;
-    width: 260px;
-    height: 35px;
-    border: 2px solid #b3b3b3;
-    border-radius: 10px;
-}
-
-.header-search i {
-    width: 15px;
-    margin: 0px 10px;
-    color: #b3b3b3;
-}
-
-.header-search .header-search-input {
-    font-size: 16px;
-    color: #b3b3b3;
-    margin-left: 0 15px;
-    outline: none;
-    border: none;
-    background: transparent;
-}
-
-.menu {
-    display: flex;
-    align-items: center;
-    gap: 0 30px;
-}
-
-.menu-link {
-    color: inherit;
-    font-weight: 600;
-}
-
-.menu-link::after {
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #4D57DD;
-    display: block;
-    transition: 0.3s linear;
-}
-
-.menu-link:hover::after {
-    width: 100%;
-}
-
-.menu-link:hover {
-    color: #4D57DD;
-}
-
-.btn {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 600;
-    font-family: 'Nunito', sans-serif;
-    height: 35px;
-    padding: 0 30px;
-    border-radius: 10px;
-    background-color: transparent;
-    border: 0;
-    outline: none;
-    transition: 0.3s;
-}
-
-.btn .btn-primary {
-    color: #fff;
-    background-color: #4D57DD;
-}
-
-.btn .btn-secondary {
-    color: #4D57DD;
-    border: 2px solid #4D57DD;
-}
-
-.btn .btn-secondary:hover {
-    color: #fff;
-    background-color: #4D57DD;
-}
+@import url("./variables.css");
 
 /* Banner */
 
 .banner {
     width: 100%;
     height: 445px;
-    margin-top: 80px;
-    background: #F1F8FF;
-    z-index: 1;
+    background: var(--light-blue);
 }
 
 .banner-main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    /* padding-top: 75px; */
 }
 
 .banner-main .banner-heading {
@@ -166,13 +30,13 @@ ul {
 }
 
 .banner-btn {
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
     font-size: 25px;
     font-weight: 700;
-    font-family: 'Nunito', sans-serif;
+    font-family: var(--primary-font);
     height: 50px;
     margin-right: 20px;
     border-radius: 10px;
@@ -180,6 +44,8 @@ ul {
     border: 0;
     outline: none;
     transition: 0.3s;
+    position: relative;
+    z-index: 1;
 }
 
 .banner-btn .banner-btn-primary {
@@ -221,17 +87,21 @@ ul {
 
 /* Category */
 
+.category-main {
+    width: 100%;
+    height: 375px;
+    padding: 30px 0;
+}
 .section-subtitle {
     font-size: 16px;
     font-weight: 500;
     letter-spacing: 1px;
     text-align: center;
-    margin-top: 40px;
-    margin-block-end: 15px;
     color: #EC7070;
 }
 
 .section-title {
+    margin-top: 5px;
     font-size: 35px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -243,11 +113,12 @@ ul {
     justify-content: space-between;
     align-items: center;
     gap: 27px;
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 .category-card {
     background-color: var(--color);
+    
     padding: 33px 10px;
     text-align: center;
     border-radius: 10px;
@@ -257,7 +128,7 @@ ul {
     font-size: 22px;
     font-weight: 600;
     color: #000;
-    margin-block: 10px 10px;
+    margin-block: 10px 0;
 }
 
 .category-card .card-text {
@@ -271,12 +142,24 @@ ul {
     font-size: 16px;
     font-weight: 500;
     padding: 4px 15px;
-    border-radius: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--color-bg);
+    color: var(--color-text);
+    cursor: pointer;
+    transition: .3s linear;
 }
 
+.category-card .card-badge:hover {
+    background-color: var(--color-text);
+    color: #fff;
+}
+
+
+
+/* State */
 .state .container {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -317,6 +200,14 @@ ul {
     margin-top: 40px;
 }
 
+.course-list li {
+    border: 2px solid transparent;
+    transition: .3s linear;
+}
+.course-list li:hover {
+    border: 2px solid #000;
+}
+
 .course-list img {
     width: 350px;
     height: 226px;
@@ -327,8 +218,11 @@ ul {
 }
 
 .course-list .course-info .level {
-    border: 1px solid #000;
-    padding: 4px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #CFF1E0;
+    color: #0C7C42;
+    padding: 2px 10px;
 }
 
 .course-list .course-info h3 {
@@ -370,66 +264,16 @@ ul {
 }
 
 .course-popular .btn {
+    margin: 40px;
     display: flex;
     padding: 9px 30px;
+    flex-direction: column;
+}
+
+.course-popular .btn .btn-secondary {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-}
-
-.course-popular .btn .btn-secondary {
     display: inline;
 }
-
-.footer {
-    background: #222222;
-}
-
-.footer-main {
-    padding: 50px;
-    display: flex;
-    justify-content: space-between;
-    gap: 231px;
-}
-
-.footer-left{
-    display: flex;
-    flex-direction: column;
-}
-
-.footer-left .footer-media {
-    display: flex;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    gap: 25px;
-}
-
-.footer-center {
-    width: 250px;
-    color: #fff;
-    line-height: 3;
-}
-
-.footer-center h3 {
-    font-size: 20px;
-}
-.footer-center a {
-    color: #fff;
-}
-
-.footer-right {
-    width: 350px;
-    color: #fff;
-    line-height: 3;
-}
-.phone, .email, .address {
-    display: flex;
-    align-items: center;
-    gap: 25px;
-}
-.footer-right h3 {
-    font-size: 20px;
-}
-
