--- a/css/homepage.css
+++ b/css/homepage.css
@@ -159,7 +159,7 @@
 
 /* State */
 .state .container {
-    padding: 100px;
+    padding-top: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -189,6 +189,7 @@
 }
 
 .course-popular {
+    margin-top: 100px;
     margin-bottom: 100px;
 }
 
