--- a/css/account-info.css
+++ b/css/account-info.css
@@ -29,7 +29,7 @@
 
 .account-tab nav::after {
     content: "";
-    background: #000;
+    background: var(--black);
     width: 100%;
     height: 1px;
     position: absolute;
@@ -51,7 +51,7 @@
 
 #account:checked~nav label .account,
 #pass:checked~nav label .pass {
-    color: #4D57DD;
+    color: var(--blue-darkest);
 }
 
 input[type='radio'] {
@@ -61,7 +61,7 @@ input[type='radio'] {
 .account-tab nav .slider {
     position: absolute;
     height: 3px;
-    background-color: #4D57DD;
+    background-color: var(--blue-darkest);
     border-radius: 20px;
     width: 50%;
     z-index: 1;
@@ -79,11 +79,11 @@ input[type='radio'] {
 }
 
 #account:checked~nav .account {
-    color: #4D57DD;
+    color: var(--blue-darkest);
 }
 
 #pass:checked~nav .pass {
-    color: #4D57DD;
+    color: var(--blue-darkest);
 }
 
 section {
@@ -119,7 +119,7 @@ section .account-content .title {
 section .account-content .avatar {
     width: 100px;
     height: 100px;
-    background-color: #D9D9D9;
+    background-color: var(--white-darkest);
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -146,7 +146,7 @@ section .account-content .avatar {
 .account-content .account-form select {
     width: 200px;
     height: 30px;
-    border: 1px solid #000;
+    border: 1px solid var(--black);
 }
 
 .btn .btn-primary {
