--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url("./reset.css");
+@import url("./variables.css");
+
 body{
-    font-family: 'Nunito', sans-serif;
+    font-family: var(--primary-font);
     font-size: 16px;
     line-height: 1;
 }
