--- a/css/homepage.css
+++ b/css/homepage.css
@@ -29,57 +29,6 @@
     margin-bottom: 50px
 }
 
-.banner-btn {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    font-size: 25px;
-    font-weight: 700;
-    font-family: var(--primary-font);
-    height: 50px;
-    margin-right: 20px;
-    border-radius: 10px;
-    background-color: transparent;
-    border: 0;
-    outline: none;
-    transition: 0.3s;
-    position: relative;
-    z-index: 1;
-}
-
-.banner-btn .banner-btn-primary {
-    padding: 0 47px;
-    color: #fff;
-    background-color: #4D57DD;
-    transform: scale(.9);
-}
-
-.banner-btn .banner-btn-primary:hover {
-    transform: scale(1);
-}
-
-.banner-btn .banner-btn-secondary {
-    padding: 0 20px;
-    color: #4D57DD;
-    border: 2px solid #4D57DD;
-    font-weight: 600;
-    transform: scale(.9);
-}
-
-.banner-btn .banner-btn-secondary:hover {
-    transform: scale(1);
-}
-
-.banner-btn .banner-btn-secondary i {
-    margin-left: 10px;
-    transition: .3s;
-}
-
-.banner-btn .banner-btn-secondary:hover i {
-    transform: translateX(7px);
-}
-
 .banner-main .banner-image {
     width: 514px;
     height: 433px;
@@ -97,7 +46,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     text-align: center;
-    color: #EC7070;
+    color: var(--pink);
 }
 
 .section-title {
@@ -127,7 +76,7 @@
 .category-card .h3 {
     font-size: 22px;
     font-weight: 600;
-    color: #000;
+    color: var(--black);
     margin-block: 10px 0;
 }
 
@@ -152,7 +101,7 @@
 
 .category-card .card-badge:hover {
     background-color: var(--color-text);
-    color: #fff;
+    color: var(--white);
 }
 
 
@@ -172,7 +121,7 @@
     gap: 14px;
     width: 220px;
     height: 90px;
-    border: 1px solid #b3b3b3;
+    border: 1px solid var(--gray);
     border-radius: 10px;
 }
 
@@ -206,7 +155,7 @@
     transition: .3s linear;
 }
 .course-list li:hover {
-    border: 2px solid #000;
+    border: 2px solid var(--black);
 }
 
 .course-list img {
@@ -221,8 +170,8 @@
 .course-list .course-info .level {
     border: none;
     border-radius: 5px;
-    background-color: #CFF1E0;
-    color: #0C7C42;
+    background-color: var(--green);
+    color: var(--green-dark);
     padding: 2px 10px;
 }
 
@@ -242,7 +191,7 @@
 }
 
 .course-list .course-info .course-rate .rate-star {
-    color: #EC7070;
+    color: var(--pink);
 }
 
 .course-list .course-info .course-rate p {
