--- a/css/leasson-detail.css
+++ b/css/leasson-detail.css
@@ -1,7 +1,8 @@
 @import 'reset.css';
 @import 'global.css';
+@import url("variables.css");
 
-h3 {
+.leasson-main h3 {
     font-size: 20px;
     font-weight: 600;
     margin-left: 10px;
@@ -9,7 +10,8 @@ h3 {
 
 .leasson-main {
     display: inline-flex;
-    margin-top: 30px;
+    margin: 30px 0 200px 0;
+    
 }
 
 .course-leasson {
@@ -35,7 +37,7 @@ h3 {
     display: flex;
     gap: 10px;
     padding: 15px 0px;
-    color: #000;
+    color: var(--black);
     position: relative;
     transition: all 0.3s ease-out;
 }
@@ -49,8 +51,8 @@ h3 {
 }
 
 .course-dropdown:hover {
-    background: #4D57DD;
-    color: #fff;
+    background: var(--blue-darkest);
+    color: var(--white);
 
 }
 
@@ -62,14 +64,14 @@ h3 {
 
 .submenuItems {
     display: none;
-    background: #fff;
+    background: var(--white);
     /* transition: all 2s ease-in-out; */
 }
 
 .submenuItems li a {
     display: flex;
     align-content: center;
-    color: #000;
+    color: var(--black);
     margin-left: 10px;
     padding: 10px 0px;
     transition: all .2s ease-in-out;
@@ -82,7 +84,7 @@ h3 {
 }
 
 .submenuItems a:hover {
-    background: #F1F8FF;
+    background: var(--light-blue);
 }
 
 .accordion-menu-lesson li.active .submenuItems {
@@ -98,7 +100,7 @@ h3 {
 }
 
 .course-video {
-    width: 1080px;
+    width: 1060px;
 }
 
 .video-title {
@@ -115,22 +117,22 @@ h3 {
 }
 
 .video-title .progress button {
-    background: #4D57DD;
-    color: #fff;
-    border: 2px solid #fff;
+    background: var(--blue-darkest);
+    color: var(--white);
+    border: 2px solid var(--white);
     border-radius: 5px;
     padding: 5px 20px;
     margin-left: 10px;
 }
 
 .video-title .progress button:hover {
-    background-color: #fff;
-    border: 2px solid #4D57DD;
-    color: #4D57DD;
+    background-color: var(--white);
+    border: 2px solid var(--blue-darkest);
+    color: var(--blue-darkest);
 }
 
 .video {
     width: 100%;
     height: 550px;
-    background: #000;
+    background: var(--black);
 }
