--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("variables.css");
 * {
     margin: 0;
     padding: 0;
@@ -11,12 +12,12 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: #444;
+    background-color: var(--gray-dark);
 }
 
 .container{
     position: relative;
-    background-color: #fff;
+    background-color: var(--white);
     width: 70vw;
     height: 80vh;
     border-radius: 15px;
@@ -30,7 +31,7 @@ body{
     left: -50%;
     width: 100%;
     height: 100%;
-    background-color: #4D57DD;
+    background-color: var(--blue-darkest);
     z-index: 6;
     transform: translateX(100%);
     transition: 1s ease-in-out;
@@ -79,7 +80,7 @@ form.sign-up-form {
     width: 100%;
     font-size: 18px;
     font-weight: 300;
-    color: rgba(0, 0, 0, 0.30);
+    color: var(--gray-dark);
 }
 .social-media {
     display: flex;
@@ -95,9 +96,9 @@ form.sign-up-form {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #000;
+    color: var(--black);
     font-size: 18px;
-    border: 2px solid #000;
+    border: 2px solid var(--black);
     border-radius: 50px;
 }
 .social-icon i {
@@ -109,8 +110,8 @@ a {
 }
 
 .social-icon:hover {
-    border-color: #4D57DD;
-    color: #4D57DD;
+    border-color: var(--blue-darkest);
+    color: var(--blue-darkest);
 }
 
 .line{
@@ -118,7 +119,7 @@ a {
     height: 1px;
     width: 100%;
     margin: 15px 0;
-    background-color: #d4d4d4;
+    background-color: var(--gray);
 }
 .line::before{
     content: 'hoặc';
@@ -126,8 +127,8 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
-    color: #232836;
+    background-color: var(--white);
+    color: var(--gray-dark);
     padding: 0 15px;
 }
 
@@ -135,7 +136,7 @@ a {
     width: 100%;
     height: 50px;
     margin: 10px 0;
-    border: 2px solid #000;
+    border: 2px solid var(--black);
     border-radius: 50px;
     display: flex;
     align-items: center;
@@ -143,7 +144,7 @@ a {
 .input-field i {
     flex: 1;
     text-align: center;
-    color: #000;
+    color: var(--black);
     font-size: 18px;
 }
 .input-field input {
@@ -159,7 +160,7 @@ a {
 .input-field button {
     flex: 1;
     text-align: center;
-    color: #000;
+    color: var(--black);
     font-size: 18px;
     border: none;
     background: none;
@@ -168,12 +169,12 @@ a {
     display: block;
     text-align: center;
     text-decoration: none;
-    color: #4D57DD;
+    color: var(--blue-darkest);
     font-size: 16px;
     transform: .3s;
 }
 .forgot-pass a:hover{
-    color: #000;
+    color: var(--black);
 }
 
 .btn {
@@ -181,17 +182,17 @@ a {
     height: 50px;
     border: none;
     border-radius: 50px;
-    background: #4D57DD;
-    color: #fff;
+    background: var(--blue-darkest);
+    color: var(--white);
     font-weight: 700;
     margin: 10px 0;
     text-transform: uppercase;
     cursor: pointer;
 }
 .btn:hover {
-    background: #fff;
-    color: #4D57DD;
-    border: 2px solid #4D57DD;
+    background: var(--white);
+    color: var(--blue-darkest);
+    border: 2px solid var(--blue-darkest);
 }
 
 .panels-container {
@@ -219,7 +220,7 @@ a {
     pointer-events: none;
 }
 .content {
-    color: #fff;
+    color: var(--white);
     transition: 1.1s ease-in-out;
     transition-delay: 0.5s;
 }
@@ -228,7 +229,7 @@ a {
     font-weight: 700;
 }
 .panel .btn{
-    border: 2px solid #fff;
+    border: 2px solid var(--white);
 }
 .image {
     width: 100%;
